# ice-cream-dataops

./: pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/extraction_pipelines/: ep_icapi_datapoints.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: functions.Function.yaml  schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml  create_asset_hierarchy.yaml  icapi_ts_assets_contextualization.schedule.yaml  icapi_ts_assets_contextualization.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
